--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Kurzgesagt r/place</title>
+    <title>r/place</title>
     <style>
         .container {
             position: relative;
@@ -43,8 +43,8 @@
     </script>
 
     <script>
-        const X_PIXELS = 23
-        const Y_PIXELS = 23
+        const X_PIXELS = 64
+        const Y_PIXELS = 64
         const X_OFFSET = 100
         const Y_OFFSET = 100
 
